<resources>
    <string name="app_name">Calculator  For my phone</string>

    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>


    <string name="Clear">C</string>
    <string name="Exponent">^</string>
    <string name="Parenthesis">( )</string>
    <string name="Divide">/</string>
    <string name="Multiply">*</string>
    <string name="Addition">+</string>
    <string name="Subtract">-</string>
    <string name="PlusMinus">+/-</string>
    <string name="Point">.</string>
    <string name="Equals">=</string>
    <string name="Backspace">bck</string>

    <string name="Display">Hi</string>
</resources>